Modified HTML structure and added script.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title> Star Wars | Personagens </title>
 </head>
 <body>
-	<table>
+	<table id = "characters-table">
 		<!-- Table Head -->
 		<thead>	
 		 	<tr>
@@ -17,88 +17,12 @@
 		 	</tr>
 		</thead>
 		<tbody> 
-			<!-- Linha 1 -->
-			<tr>
-				<td>Luke Skywalker</td>
-				<td>1.72</td>
-				<td>77</td>
-				<td>19BBY</td>
-				<td>Masculino</td>
-			</tr>
-			<!-- Linha 2 -->
-			<tr>
-				<td>C-3PO</td>
-				<td>1.67</td>
-				<td>75</td>
-				<td>112BBY</td>
-				<td>N/A</td>
-			</tr>
-			<!-- Linha 3 -->
-			<tr>
-				<td>R2-D2</td>
-				<td>96</td>
-				<td>32</td>
-				<td>33BBY</td>
-				<td>N/A</td>
-			</tr>
-			<!-- Linha 4 -->
-			<tr>
-				<td>Darth Vader</td>
-				<td>2.02</td>
-				<td>136</td>
-				<td>41.9BBY</td>
-				<td>Masculino</td>
-			</tr>
-			<!-- Linha 5 -->
-			<tr>
-				<td>Leia Organa</td>
-				<td>1.50</td>
-				<td>49</td>
-				<td>19BBY</td>
-				<td>Feminino</td>
-			</tr>
-			<!-- Linha 6 -->
-			<tr>
-				<td>Owen Lars</td>
-				<td>1.78</td>
-				<td>120</td>
-				<td>52BBY</td>
-				<td>masculino</td>
-			</tr>
-			<!-- Linha 7 -->
-			<tr>
-				<td>Beru Whitesun lars</td>
-				<td>1.65</td>
-				<td>75</td>
-				<td>47BBY</td>
-				<td>Feminino</td>
-			</tr>
-			<!-- Linha 8 -->
-			<tr>
-				<td>R5-D4</td>
-				<td>97</td>
-				<td>32</td>
-				<td>Desconhecido</td>
-				<td>N/A</td>
-			</tr>
-			<!-- Linha 9 -->
-			<tr>
-				<td>Biggs Darklighter</td>
-				<td>1.83</td>
-				<td>84</td>
-				<td>24BBY</td>
-				<td>Masculino</td>
-			</tr>
-			<!-- Linha 10 -->
-			<tr>
-				<td>Obi-Wan Kenobi</td>
-				<td>1.82</td>
-				<td>77</td>
-				<td>57BBY</td>
-				<td>Masculino</td>
-			</tr>
+
+
 		</tbody>
 	</table>
+
+	<script type="text/javascript" src="script.js"></script>
 
 </body>
 </html>
