Added character list

--- a/index.html
+++ b/index.html
@@ -5,23 +5,23 @@
 	<title> Star Wars | Personagens </title>
 </head>
 <body>
-	<table id = "characters-table">
+	<table id="characters-table">
 		<!-- Table Head -->
 		<thead>	
 		 	<tr>
 		 		<th>Nome</th>
 		 		<th>Altura</th>
 		 		<th>Peso</th>
+		 		<th>Cor do Cabelo</th>
+		 		<th>Cor dos Olhos</th>
 		 		<th>Ano de nascimento</th>
 		 		<th>Gênero</th>
 		 	</tr>
 		</thead>
-		<tbody id = "characters-tbody" > 
-
-
-		</tbody>
+		<tbody id="characters-tbody"> </tbody>
 	</table>
 
+	<script type="text/javascript" src="characters.js"></script>
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
