--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<tbody id="characters-tbody"> </tbody>
 	</table>
 
-	<script type="text/javascript" src="characters.js"></script>
+	<!--<script type="text/javascript" src="characters.js"></script>-->
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
