--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 		<tbody id="characters-tbody"> </tbody>
 	</table>
 
-	<!--<script type="text/javascript" src="characters.js"></script>-->
+	<button onclick="nextPage()"> Next </button>
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
