--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title> Star Wars | Personagens </title>
 </head>
-<body>
+<body id = "body">
 	<table id="characters-table">
 		<!-- Table Head -->
 		<thead>	
@@ -20,8 +20,9 @@
 		</thead>
 		<tbody id="characters-tbody"> </tbody>
 	</table>
+	<button id="previousPage" onclick="previousPage()"> Previous </button> 
+	<button id="nextPage" onclick="nextPage()"> Next </button>
 
-	<button onclick="nextPage()"> Next </button>
 	<script type="text/javascript" src="script.js"></script>
 
 </body>
