--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title> Star Wars | Personagens </title>
 </head>
 <body id = "body">
+
 	<table id="characters-table">
 		<!-- Table Head -->
 		<thead>	
@@ -21,9 +22,10 @@
 		</thead>
 		<tbody id="characters-tbody"> </tbody>
 	</table>
-	<button id="previousPage" onclick="previousPage()"> Previous </button> 
-	<button id="nextPage" onclick="nextPage()"> Next </button>
-
+	<div id="div-button">
+		<button id="previousPage" onclick="previousPage()"> Previous </button> 
+		<button id="nextPage" onclick="nextPage()"> Next </button>
+	</div>
 
 	<script type="text/javascript" src="script.js"></script>
 
