--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 			<tbody id="characters-tbody"> </tbody>
 		</table>
 		<div id="div-button">
-			<button id="previousPage" onclick="previousPage()"> << </button> 
-			<button id="nextPage" onclick="nextPage()"> >></button>
+			<button id="previousPage"> << </button> 
+			<button id="nextPage" > >></button>
 
 
 		</div>
